--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="scrolling.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
     <section class="one">
         <h1>
@@ -63,5 +63,5 @@
     </section>
    </div>
 </body>
-<script src="scrolling.js"></script>
+<script src="script.js"></script>
 </html>
