--- a/index.html
+++ b/index.html
@@ -3,65 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>yura</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-    <section class="one">
-        <h1>
-            <button class="yuna">Firts page</button></h1>
+<body>
+
+    <section class="sec-1 show-animate">
+        <h1 class="animate">Hi, I'm Yura</h1>
+        <p class="animate">animation on scroll using HTML CSS and Javascript</p>
     </section>
 
-    <section class="two">
-        <h1>
-            <button class="yura">
-                Second page</button></h1>
+    <section class=sec-2>
+        <h1 class="animate">Keep Scrolling</h1>
+        <p class="animate">animation on scroll using HTML CSS and Javascript</p>
     </section>
 
-    <section class="three">
-        <h1>
-            <button class="mahiro">Third page</button>
-        </h1>
+    <section class=sec-3>
+        <h1 class="animate">Nice</h1>
+        <p class="animate">animation on scroll using HTML CSS and Javascript</p>
     </section>
 
-    <section class="four">
-        <h1>
-            <button class="hina">
-            Web dev</button></h1>
+    <section class=sec-4>
+        <h1 class="animate">Very Good<span class="ShowRight-animate" style="--i:1;"></span></h1>
+        <p class="animate">animation on scroll using HTML CSS and Javascript<span class="ShowRight-animate" style="--i:3;"></span></p>
     </section>
-   </div>
+
+    <section class="sec-5">
+        <h1 class="images1">My Project</h1>
+        <div class="images">
+            <img src="website.png" alt="" class="animate" style="--i:0;">
+            <img src="scrolling.png" alt="" class="animate" style="--i:1;">
+            <img src="button.png" alt="" class="animate"  style="--i:2;">
+        </div>
+    </section>
+<!-- 
+    <section class="sec-5">
+        <div class="images">
+            <img src="website.png" alt="" class="animate">
+        </div>
+            <div class="images2">
+            <img src="scrolling.png" alt="" class="animate">
+        </div>
+        <div class="images3">
+            <img src="button.png" alt="" class="animate">
+        </div>
+        
+    </section> -->
+
+    <script src="Yuraaa.js"></script>
 </body>
-<script src="scrolling.js"></script>
-</html><!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-    <section class="one">
-        <h1>
-            <button class="yuna">Firts page</button></h1>
-    </section>
-
-    <section class="two">
-        <h1>
-            <button class="yura">
-                Second page</button></h1>
-    </section>
-
-    <section class="three">
-        <h1>
-            <button class="mahiro">Third page</button>
-        </h1>
-    </section>
-
-    <section class="four">
-        <h1>
-            <button class="hina">
-            Web dev</button></h1>
-    </section>
-   </div>
-</body>
-<script src="script.js"></script>
 </html>
